@@ -11,6 +11,7 @@ ags_lv2_plugin_new
 ags_lv2ui_manager_get_type
 ags_lv2ui_manager_get_filenames
 ags_lv2ui_manager_find_lv2ui_plugin
+ags_lv2ui_manager_load_blacklist
 ags_lv2ui_manager_load_file
 ags_lv2ui_manager_load_default_directory
 ags_lv2ui_manager_get_instance
@@ -18,6 +19,7 @@ ags_lv2ui_manager_new
 ags_ladspa_manager_get_type
 ags_ladspa_manager_get_filenames
 ags_ladspa_manager_find_ladspa_plugin
+ags_ladspa_manager_load_blacklist
 ags_ladspa_manager_load_file
 ags_ladspa_manager_load_default_directory
 ags_ladspa_manager_get_instance
@@ -43,6 +45,7 @@ ags_lv2_urid_manager_new
 ags_dssi_manager_get_type
 ags_dssi_manager_get_filenames
 ags_dssi_manager_find_dssi_plugin
+ags_dssi_manager_load_blacklist
 ags_dssi_manager_load_file
 ags_dssi_manager_load_default_directory
 ags_dssi_manager_get_instance
@@ -74,6 +77,7 @@ ags_lv2_uri_map_manager_new
 ags_lv2_manager_get_type
 ags_lv2_manager_get_filenames
 ags_lv2_manager_find_lv2_plugin
+ags_lv2_manager_load_blacklist
 ags_lv2_manager_load_file
 ags_lv2_manager_load_default_directory
 ags_lv2_manager_get_instance
